style.css
@font-face {
    font-family: "LivvicRegular";
    src: url("assets/fonts/Livvic/Livvic-Regular.ttf");
}
@font-face {
    font-family: "LinuxBiolinum";
    src: url("assets/fonts/linux-biolinum-g.ttf");
}
@font-face {
    font-family: "LivvicThin";
    src: url("assets/fonts/Livvic/Livvic-Thin.ttf");
}
@font-face {
    font-family: "BrixtonTC";
    src: url("assets/fonts/BrixtonTc.otf");
}
@font-face {
    font-family: "CalendasPlus";
    src: url("assets/fonts/Calendas_Plus.otf");
}
@import url("https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Alata&display=swap");

* {
    margin: 0;
    padding: 0;

    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}
body {
    background-color: #0e0f0e;
    color: white;
    cursor: none;
    margin: 0 auto;
}
a {
    color: inherit;
    text-decoration: none;
}
.noscroll {
    overflow: hidden;
}
*:hover {
    cursor: none;
}

/** --------------- TRANSITION PAGE --------------- **/
.pageTransition {
    background-color: #171717;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100vw;
    height: 0vh;
    z-index: 1000;
}
.pageTransition.animationSlideUp {
    animation: slideUpTransition 400ms ease-out;
    animation-fill-mode: both;
}
@keyframes slideUpTransition {
    0% {
        height: 0vh;
    }
    100% {
        height: 100vh;
    }
}
.pageTransition.endAnimation {
    height: 100vh;
}
.pageTransition.desactive {
    display: none;
}

/** --------------- FOOTER NAVBAR --------------- **/
nav {
    position: fixed;
    left: 50%;
    bottom: 30px;
    transform: translate(-50%, 0%);
    display: flex;

    backdrop-filter: blur(5px);
    border-radius: 90px;
    background: rgba(120, 120, 120, 0.2);
    padding: 3px;

    font-family: LivvicThin;
    font-size: 0.8em;
    font-weight: 700;
    z-index: 100;
}
nav a {
    padding: 10px 24px;
    border-radius: 90px;
    color: white;
    
    
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}
nav a:nth-child(1) {
    margin-right: 3px;
}
nav a:nth-child(2) {
    margin-left: 3px;
}
nav a.active {
    background-color: rgba(120, 120, 120, 0.5);
}

/** --------------- CURSOR --------------- **/
.cursor {
    width: 34px;
    height: 34px;
    cursor: none;
    border: 1px solid rgb(47, 47, 109);
    border-radius: 50%;
    position: absolute;
    pointer-events: none;
    z-index: 1000;
}
.cursor.click {
    width: 28px;
    height: 28px;
    transform: translate(3px, 3px);
}
.cursor::before {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 5px;
    height: 5px;
    background: rgb(105, 105, 255);
    border-radius: 50%;
}
.mouseHover {
    animation: Anim2 1100ms linear infinite;
}
@keyframes Anim2 {
    0% {
        background: rgb(47, 47, 109);
        border: 1px solid rgb(47, 47, 109);
        transform: scale(1);
        opacity: 1;
    }
    50% {
        background: rgb(47, 47, 109);
        border: 1px solid rgb(47, 47, 109);
        transform: scale(1.1);
        opacity: 0.7;
    }
    100% {
        background: rgb(47, 47, 109);
        border: 1px solid rgb(47, 47, 109);
        transform: scale(1);
        opacity: 1;
    }
}

/** --------------- CREDIT --------------- **/
.credit {
    position: fixed;
    bottom: 10px;
    right: 10px;
    font-family: "LinuxBiolinum", cursive;
    color: #939393;
    z-index: 100;

    display: flex;
}

/** -------------------- INDICATOR PAGE */
#advancementInPage {
    width: 5px;
    height: 50%;
    position: fixed;
    top: 50%;
    right: 20px;
    transform: translate(0, -50%);
    border-radius: 100px;
    background-color: #232423;
}
#scrollIndicator {
    background-color: #4e4e4e;
    width: 100%;
    height: 10%;
    z-index: 20;
    position: absolute;
    border-radius: 100px;
}



/** -------------------- MEDIAQUERIES */
@media screen and (max-width: 768px) {
    .cursor{
        visibility:hidden;
    }
    #advancementInPage{
        visibility:hidden;
    }
}
@media screen and (max-width: 425px) {
    nav{
        min-width: 70%;
    }
    nav a{
        padding: 10px 0;
        width: 50%;
    }
}

